Fixed single line dialog spacing and fixed issue with floating close (#1081)
button

--- a/src/less/dialog/base/dialog.less
+++ b/src/less/dialog/base/dialog.less
@@ -20,7 +20,7 @@
 .dialog__body {
     .dialog-body-content();
 
-    min-height: 100%;
+    min-height: 18px;
 }
 
 .dialog__footer {
@@ -80,11 +80,6 @@
     .dialog__main,
     .dialog__body {
         min-height: auto;
-    }
-
-    .dialog__close {
-        float: right;
-        position: sticky;
     }
 }
 
